# uniswap-jit-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: process.py
src/: config.py  detector.py  enricher.py  loader.py  price.py  state.py
tests/: test_detector.py  test_enricher.py  test_integration.py  test_price.py  test_state.py
tests/fixtures/: pool_2697600_mini.csv
