[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "uniswap-jit-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20",
    "pyarrow>=14",
    "sortedcontainers>=2.4",
    "tqdm>=4.66",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
jit-process = "scripts.process:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
